--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     background-color: #f4f4f4;
   }
   .hero-section {
-    background: url('Images/hero-background.jpg') center/cover;
+    background: url('Images/background.jpg') center/cover;
     color: white;
     text-align: center;
     padding: 100px 20px;
