--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <section class="hero-section">
   <h1>Jatin Adya B</h1>
   <p>Data Scientist | Machine Learning Enthusiast |Aspiring Sports Analyst</p>
-  <a href="Jatin_Adya_Resume.pdf" download class="btn btn-light">Download Resume</a>
+  <a href="Jatin,B_Resume.pdf" download class="btn btn-light">Download Resume</a>
 </section>
 
 <section id='about' class="container">
