--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <section id='about' class="container">
   <h2 class="section-title">About Me</h2>
-  <div class="image-placeholder">Profile Image Here</div>
+  <img src="Images/profile.jpg" alt="Profile Image" class="img-fluid rounded-circle mb-3" style="width: 150px; height: 150px;">
   <p>I am a data scientist with a passion for solving complex problems using data-driven solutions. With expertise in predictive modeling, machine learning, and sports analytics, I have worked across multiple industries, including finance, insurance, and sports. My ability to derive meaningful insights from large datasets has helped businesses make more informed decisions.</p>
 </section>
 
