--- a/index.html
+++ b/index.html
@@ -185,41 +185,113 @@
         <div class="container py-5">
             <h2 class="section-title text-center animate">Experience</h2>
             <div class="row g-4">
-                <!-- Experience items would follow similar structure to projects -->
+                <div class="col-lg-12 animate">
+                    <div class="card h-100">
+                        <img src="Images/chess.jpeg" class="card-img-top" alt="Chess Analytics">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Chess Betting Markets Strategist</h5>
+                            <h6 class="text-primary mb-3">Freelance | Dec 2023 – Present</h6>
+                            <p class="card-text">
+                                Developing ML models using historical chess data to forecast match outcomes and optimize betting strategies. 
+                                Implementing statistical analysis techniques including Elo rating adjustments and termination pattern recognition.
+                            </p>
+                            <div class="mt-3">
+                                <span class="skill-badge">Machine Learning</span>
+                                <span class="skill-badge">Python</span>
+                                <span class="skill-badge">Statistical Analysis</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-12 animate mt-4">
+                    <div class="card h-100">
+                        <img src="Images/basketball.jpeg" class="card-img-top" alt="Basketball Analytics">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Basketball Analyst/Writer</h5>
+                            <h6 class="text-primary mb-3">Freelance | Dec 2023 – Present</h6>
+                            <p class="card-text">
+                                Creating data-driven articles analyzing player performance and team dynamics. 
+                                Utilizing advanced analytics to evaluate player efficiency and predict match outcomes.
+                            </p>
+                            <div class="mt-3">
+                                <span class="skill-badge">Sports Analytics</span>
+                                <span class="skill-badge">Data Visualization</span>
+                                <span class="skill-badge">Python</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-12 animate mt-4">
+                    <div class="card h-100">
+                        <img src="Images/sphere.jpeg" class="card-img-top" alt="Data Analytics">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Data Analytics Intern</h5>
+                            <h6 class="text-primary mb-3">Sphere Solutions | Jan 2023 – Jul 2023</h6>
+                            <p class="card-text">
+                                Developed real-time Grafana dashboards and Flask-based web applications for vehicle tracking. 
+                                Optimized SQL queries and collaborated on data pipeline improvements.
+                            </p>
+                            <div class="mt-3">
+                                <span class="skill-badge">SQL</span>
+                                <span class="skill-badge">Flask</span>
+                                <span class="skill-badge">Data Visualization</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Projects Section (update with your projects) -->
     <section id="projects" class="py-5">
         <div class="container py-5">
             <h2 class="section-title text-center animate">Featured Projects</h2>
             <div class="row g-4">
                 <div class="col-lg-6 animate">
                     <div class="card h-100">
-                        <img src="Images/hartford.png" class="card-img-top" alt="Hartford Project">
+                        <img src="Images/hartford.png" class="card-img-top" alt="Insurance Project">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Customer Churn Prediction</h5>
                             <h6 class="text-primary mb-3">The Hartford Insurance Group</h6>
                             <p class="card-text">
-                                Developed predictive model achieving 84% accuracy in identifying at-risk customers,
-                                implementing innovative two-stage modeling approach for retention optimization.
+                                Designed predictive model with 84% accuracy to identify at-risk customers, 
+                                implementing a two-step modeling approach for policy cancellation prevention.
                             </p>
                             <div class="mt-3">
                                 <span class="skill-badge">Machine Learning</span>
                                 <span class="skill-badge">Python</span>
+                                <span class="skill-badge">Scikit-learn</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 animate">
+                    <div class="card h-100">
+                        <img src="Images/travelers.png" class="card-img-top" alt="Insurance Project">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">Claim Cost Prediction</h5>
+                            <h6 class="text-primary mb-3">Travelers Insurance</h6>
+                            <p class="card-text">
+                                Developed advanced predictive model combining Poisson classification and Inverse Gaussian regression, 
+                                achieving top benchmark scores in insurance competitions.
+                            </p>
+                            <div class="mt-3">
+                                <span class="skill-badge">Statistical Modeling</span>
+                                <span class="skill-badge">R</span>
                                 <span class="skill-badge">Predictive Analytics</span>
                             </div>
                         </div>
                     </div>
                 </div>
-                
-                <!-- Other project cards would follow similar structure -->
             </div>
         </div>
     </section>
 
-    <!-- Skills Section -->
+    <!-- Skills Section (complete categories) -->
     <section id="skills" class="py-5 bg-white">
         <div class="container py-5">
             <h2 class="section-title text-center animate">Technical Arsenal</h2>
@@ -228,10 +300,30 @@
                     <div class="p-4 rounded-3 border">
                         <i class="fas fa-code fa-3x text-primary mb-3"></i>
                         <h5>Programming</h5>
-                        <p>Python, R, SQL, JavaScript</p>
+                        <p>Python, R, SQL</p>
                     </div>
                 </div>
-                <!-- Other skill categories would follow -->
+                <div class="col-md-3">
+                    <div class="p-4 rounded-3 border">
+                        <i class="fas fa-chart-line fa-3x text-primary mb-3"></i>
+                        <h5>Visualization</h5>
+                        <p>Grafana, Tableau, Matplotlib</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="p-4 rounded-3 border">
+                        <i class="fas fa-cogs fa-3x text-primary mb-3"></i>
+                        <h5>Frameworks</h5>
+                        <p>Flask, Scikit-learn</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="p-4 rounded-3 border">
+                        <i class="fas fa-cloud fa-3x text-primary mb-3"></i>
+                        <h5>Cloud</h5>
+                        <p>Google Cloud Platform</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
