--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             <a href="mailto:Jatin.adya2002@gmail.com" class="text-white">
                                 <i class="fas fa-envelope"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/jatinadya/" target="_blank" class="text-white">
+                            <a href="https://www.linkedin.com/in/jatin-adya/" target="_blank" class="text-white">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="tel:+18602349103" class="text-white">
