--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container text-center text-white animate">
-            <img src="Images/profile.jpg" alt="Jatin Adya" class="profile-img rounded-circle mb-4">
             <h1 class="display-4 fw-bold mb-3">Jatin Adya B</h1>
             <p class="lead mb-4">Turning Data into Winning Strategies</p>
             <div class="d-flex gap-3 justify-content-center">
@@ -192,8 +191,10 @@
                             <h5 class="card-title fw-bold">Chess Betting Markets Strategist</h5>
                             <h6 class="text-primary mb-3">Freelance | Dec 2023 – Present</h6>
                             <p class="card-text">
-                                Developing ML models using historical chess data to forecast match outcomes and optimize betting strategies. 
-                                Implementing statistical analysis techniques including Elo rating adjustments and termination pattern recognition.
+                                Developing machine learning (ML) models using historical chess data to forecast match outcomes and optimize betting strategies involves leveraging advanced algorithms to analyze patterns in player performance, game dynamics, and situational factors. 
+                                By incorporating statistical analysis techniques such as Elo rating adjustments, the models can account for player skill progression and relative strength over time. 
+                                Additionally, termination pattern recognition helps identify common endgame scenarios and decisive moments, enabling more accurate predictions of game outcomes. These insights are then used to refine betting strategies, optimizing wagers based on probabilistic forecasts and risk assessment. 
+                                The integration of domain-specific knowledge with data-driven approaches ensures robust and actionable predictions for both chess enthusiasts and betting markets.
                             </p>
                             <div class="mt-3">
                                 <span class="skill-badge">Machine Learning</span>
@@ -211,8 +212,11 @@
                             <h5 class="card-title fw-bold">Basketball Analyst/Writer</h5>
                             <h6 class="text-primary mb-3">Freelance | Dec 2023 – Present</h6>
                             <p class="card-text">
-                                Creating data-driven articles analyzing player performance and team dynamics. 
-                                Utilizing advanced analytics to evaluate player efficiency and predict match outcomes.
+                                Creating data-driven articles analyzing player performance and team dynamics in the NBA involves leveraging advanced analytics and basketball-specific metrics to provide actionable insights. 
+                                Utilizing advanced statistics such as Player Efficiency Rating (PER), True Shooting Percentage (TS%), Win Shares (WS), and Box Plus-Minus (BPM), the articles can evaluate individual player contributions and efficiency on the court. 
+                                Team dynamics are assessed through metrics like Net Rating, Assist-to-Turnover Ratio, Pace, and Defensive Rating, which highlight offensive and defensive effectiveness, ball movement, and overall team cohesion. 
+                                Predictive modeling techniques, such as regression analysis and machine learning algorithms, are applied to historical data to forecast game outcomes, factoring in variables like player matchups, home-court advantage, and injury reports. 
+                                These data-driven insights, enriched with visualizations like shot charts, player tracking heatmaps, and trend graphs, provide fans, analysts, and betting enthusiasts with a comprehensive understanding of the game, while also informing strategies for fantasy leagues and sports betting.
                             </p>
                             <div class="mt-3">
                                 <span class="skill-badge">Sports Analytics</span>
@@ -230,8 +234,9 @@
                             <h5 class="card-title fw-bold">Data Analytics Intern</h5>
                             <h6 class="text-primary mb-3">Sphere Solutions | Jan 2023 – Jul 2023</h6>
                             <p class="card-text">
-                                Developed real-time Grafana dashboards and Flask-based web applications for vehicle tracking. 
-                                Optimized SQL queries and collaborated on data pipeline improvements.
+                                Developed real-time Grafana dashboards for CSX to monitor critical vehicle metrics such as real-time status, rental duration, and GPS location, enabling stakeholders to track fleet performance and make data-driven decisions. 
+                                Integrated these dashboards into a custom Flask web application, offering a unified platform for real-time data visualization and management. 
+                                This solution improved operational efficiency by providing instant access to actionable insights, reducing manual effort, and enhancing the overall user experience.
                             </p>
                             <div class="mt-3">
                                 <span class="skill-badge">SQL</span>
@@ -257,8 +262,9 @@
                             <h5 class="card-title fw-bold">Customer Churn Prediction</h5>
                             <h6 class="text-primary mb-3">The Hartford Insurance Group</h6>
                             <p class="card-text">
-                                Designed predictive model with 84% accuracy to identify at-risk customers, 
-                                implementing a two-step modeling approach for policy cancellation prevention.
+                                Developed a two-step LightGBM model to predict customer churn with 84% accuracy, identifying customers likely to cancel policies in the flat-term or mid-term. 
+                                Used KNN for customer segmentation to group customers based on behavior and risk profiles, enabling targeted retention strategies like personalized offers and proactive support. 
+                                This approach improved customer retention and optimized resource allocation.
                             </p>
                             <div class="mt-3">
                                 <span class="skill-badge">Machine Learning</span>
@@ -276,8 +282,10 @@
                             <h5 class="card-title fw-bold">Claim Cost Prediction</h5>
                             <h6 class="text-primary mb-3">Travelers Insurance</h6>
                             <p class="card-text">
-                                Developed advanced predictive model combining Poisson classification and Inverse Gaussian regression, 
-                                achieving top benchmark scores in insurance competitions.
+                                Contributed to enhancing insurance claim cost and severity predictions for auto insurance, achieving the top benchmark score of 0.229 in Travelers’ Kaggle competition. 
+                                Leveraged predictive analytics to build a robust solution for auto insurance claims. 
+                                Developed a two-phase model that combined a Poisson classifier for frequency prediction and an Inverse Gaussian regressor for severity estimation, significantly improving prediction accuracy. 
+                                This approach enabled more precise cost forecasting and better risk assessment, ultimately supporting data-driven decision-making in claims management.
                             </p>
                             <div class="mt-3">
                                 <span class="skill-badge">Statistical Modeling</span>
